# bhargavrpatel.github.io

./: .gitignore  CNAME  Gemfile  LICENSE.md  Makefile  README.md  _config.yml  about.markdown  about.md  index.html  main.css  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
_data/: navigation.yml
_includes/: share.html  sidebar.html
_layouts/: default.html  post.html
_posts/: 2016-09-01-pattern-matching.markdown  2016-09-01-pattern-matching.md
_sass/: _syntax_highlighting.scss
assets/css/: iota.css  main.css  style.css
docs/: a-sample-article-1.html  archives.html  index.html  tags.html
docs/tag/: tag1.html  tag2.html
me/: index.md
output/: a-sample-article-01-in-2022.html  a-sample-article-02-in-2001.html  a-sample-article-03.html  a-sample-article-04.html  a-sample-article-05.html  a-sample-article-06.html  a-sample-article-07.html  a-sample-article-08.html  a-sample-article-09.html  a-sample-article-10.html  a-sample-article-11.html  a-sample-article-12.html  a-sample-article-13.html  a-sample-article-14.html  a-sample-article-15.html  a-sample-article-16.html  a-sample-article-17.html  a-sample-article-18.html  a-sample-article-19.html  a-sample-article-20.html  archives.html  authors.html  categories.html  index4.html  tags.html
output/author/: bhargav-r-patel.html  bhargav-r-patel2.html  bhargav-r-patel3.html
output/tag/: tag1.html  tag10.html  tag11.html  tag12.html  tag13.html  tag14.html  tag142.html  tag15.html  tag16.html  tag17.html  tag172.html  (+11 more)
pages/: about.html
posts/: hello.html
src/: pelicanconf.py  publishconf.py
(+32 files in other folders)
