[tool.poetry]
name = "bhargavrpatel.github.io"
version = "0.1.0"
description = ""
authors = ["Bhargav R. Patel <bhargav@instacart.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {version = "^4.8.0", extras = ["markdown"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
