[tool.poetry]
name = "bhargavrpatel.github.io"
version = "0.1.0"
description = ""
authors = ["Bhargav R. Patel <bhargav@instacart.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {version = "^4.8.0", extras = ["markdown"]}
"minchin.pelican.plugins.nojekyll" = "^1.1.1"
Pygments = "^2.13.0"

[tool.poetry.dev-dependencies]
lxml = "^4.9.1"
djlint = "^1.19.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="jinja"